# clippa-rs

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  clippa-harvest.service
src/: lib.rs
