[package]
name = "clippa-rs"
version = "0.1.5"
edition = "2024"

[dependencies]
wl-clipboard-rs = "0.8"
notify-rust = "4.1"
regex = "1.10"
tokio = { version = "1", features = ["full", "signal"] }
dirs = "5.0"
ratatui = "0.26"
crossterm = "0.27"
reqwest = "0.13.2"
scraper = "0.25.0"
futures-util = "0.3.32"
